# movie-recommender

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml  download_artifacts.py  pyproject.toml  recommender.py  start.sh  streamlit_app.py
api/: main.py
artifacts/: tfidf_vectorizer.pkl
frontend/: app.py
notebooks/: 01_EDA_and_Data_Preparation_MR_.ipynb  02_Retrieval_Engine_&_Semantic_Search_MR_ (1).ipynb  03_Ranking_+_NDCG_+_Ablation_MR_ (1).ipynb
pipeline/: build_artifacts.py
